--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Mustafa Hussein
+#logo: /assets/img/headshot_circle.png
+#description: IT Project Manager
+#show_downloads: true
+theme: jekyll-theme-cayman
